style: fix question mark rotation, aspect ratio and spacing in scrollytelling overlay

--- a/css/style.css
+++ b/css/style.css
@@ -2063,7 +2063,7 @@ img { display: block; max-width: 100%; }
     width: 0.3em;
     height: 1.05em;
     vertical-align: middle;
-    margin-left: 0.05em;
+    margin-left: 0.35em;
     position: relative;
     top: -0.05em;
 }
